# RoboMaster

./: README.md  map_pcd.pcd  roborts-green2.rules  roborts-orange1.rules
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/autofire/: Lidar2Enemy.h  Lidar2EnemyRequest.h  Lidar2EnemyResponse.h  ShootSwitch.h  ShootSwitchAction.h  ShootSwitchActionFeedback.h  ShootSwitchActionGoal.h  ShootSwitchActionResult.h  ShootSwitchFeedback.h  ShootSwitchGoal.h  ShootSwitchRequest.h  ShootSwitchResponse.h  ShootSwitchResult.h  enemy_id.h
devel/include/modified_chassis/: MoveMode.h  MoveModeAction.h  MoveModeActionFeedback.h  MoveModeActionGoal.h  MoveModeActionResult.h  MoveModeFeedback.h  MoveModeGoal.h  MoveModeRequest.h  MoveModeResponse.h  MoveModeResult.h  RechargeAction.h  RechargeActionFeedback.h  RechargeActionGoal.h  RechargeActionResult.h  RechargeFeedback.h  RechargeGoal.h  RechargeResult.h
devel/include/obstacle_detector/: CircleObstacle.h  Obstacles.h
devel/include/roborts_msgs/: FricWhl.h  FricWhlRequest.h  GameRobotBullet.h  GameRobotHP.h  GameStatus.h  GameZoneArray.h  RobotDamage.h  RobotStatus.h  ShootCmd.h  ShootCmdRequest.h
devel/include/ros_yolo/: ArmorPoints.h  Box.h
devel/include/yolo/: ArmorPoints.h  Box.h
devel/lib/chassis/: rotation_node
devel/lib/ira_laser_tools/: laserscan_multi_merger  laserscan_virtualizer
devel/lib/laser_filters/: generic_laser_filter_node  scan_to_cloud_filter_chain  scan_to_scan_filter_chain  test_scan_filter_chain
devel/lib/modified_chassis/: chassis_mode_server_node  find_camera_client_node  find_camera_server_node  modified_odom_node  modified_turret_node  recharge_client_node  recharge_server_node  set_goal_test  teleop_node
devel/lib/my_icp/: my_icp_node
devel/lib/obstacle_analyser/: debug_goal2  obstacle_analyser_node
devel/lib/obstacle_detector/: obstacle_extractor_node  obstacle_publisher_node  obstacle_tracker_node  scans_merger_node
devel/lib/obstacle_filter/: obstacle_filter_node
devel/lib/pkgconfig/: autofire.pc  camera.pc  cartographer_slam.pc  chassis.pc  ira_laser_tools.pc  laser_filters.pc  modified_chassis.pc  my_icp.pc  obstacle_analyser.pc  obstacle_detector.pc  obstacle_filter.pc  roborts_base.pc  roborts_bringup.pc  roborts_common.pc  roborts_costmap.pc  roborts_decision.pc  roborts_localization.pc  roborts_msgs.pc  roborts_planning.pc  robot_teleop.pc  ros_yolo.pc  rplidar_ros.pc  strategy.pc  uvc_camera.pc  xsens_mti_driver.pc  yolo.pc
devel/lib/roborts_base/: base_twist_node  roborts_base_node
devel/lib/roborts_costmap/: test_costmap
devel/lib/roborts_decision/: behavior_test_node  debug_goal
devel/lib/roborts_localization/: localization_node
devel/lib/roborts_planning/: brake  debug_sub  escaper  global_planner_node  global_planner_test  local_planner_node  path_receiver_c  self_inspection  teb_test  vel_converter
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
devel/lib/uvc_camera/: uvc_camera_node  uvc_stereo_node
devel/lib/xsens_mti_driver/: xsens_mti_node
src/: .rosinstall
src/RoboRTS/: roborts_base.tar.xz
src/RoboRTS/roborts_base/: CMakeLists.txt  package.xml
src/RoboRTS/roborts_costmap/: CMakeLists.txt
src/RoboRTS/roborts_decision/: CMakeLists.txt  behavior_test.bak.cpp  behavior_test.cpp  debug_goal.cpp
src/RoboRTS/roborts_localization/: CMakeLists.txt  localization_config.h  localization_node.cpp  localization_node.h  myICP.cpp  myICP.h  package.xml
src/RoboRTS/roborts_msgs/: CMakeLists.txt
src/RoboRTS/roborts_planning/: CMakeLists.txt
src/RoboRTS/roborts_planning/local_planner/: CMakeLists.txt
src/RoboRTS/roborts_planning/local_planner/include/local_planner/: local_planner_node.h
src/RoboRTS/roborts_planning/local_planner/src/: action_test.cpp  brake.cpp  debug.py  debug_sub.cpp  escaper.cpp  local_planner_node.cpp  path_receiver.bak  path_receiver.py  path_receiver_c.cpp  robot_position_cost.cpp  self_inspection.cpp  test_pub_path.py  test_pub_sos.py
src/RoboRTS/roborts_planning/local_planner/timed_elastic_band/config/: timed_elastic_band.prototxt
src/RoboRTS/roborts_planning/local_planner/timed_elastic_band/include/timed_elastic_band/: teb_local_planner.h
src/RoboRTS/roborts_planning/local_planner/timed_elastic_band/src/: teb_local_planner.cpp  teb_local_planner.cpp_bak
src/autofire/: CMakeLists.txt  package.xml
src/autofire/action/: ShootSwitch.action
src/autofire/launch/: shoot.launch
src/autofire/msg/: enemy_id.msg
src/autofire/src/: aim.py  aimcali.py  aimtest.py  aimtest2.py  box2dis.py  bulletinfo.py  calibrate.py  shoot.py
src/autofire/srv/: Lidar2Enemy.srv  ShootSwitch.srv
src/camera/: CMakeLists.txt  package.xml
src/camera/launch/: camera.launch
src/camera/src/: camera.py
src/cartographer_slam/: CMakeLists.txt  package.xml
src/cartographer_slam/launch/: mapping.launch
src/chassis/: CMakeLists.txt  package.xml
src/chassis/src/: rotation.cpp
src/ira_laser_tools/src/: laserscan_multi_merger.cpp
src/laser_filters/examples/: box_filter_CAR1.yaml  box_filter_CAR2.yaml  box_filter_example.launch  range_filter.yaml  (+1 more)
src/modified_chassis/: CMakeLists.txt  ekf_template.yaml  package.xml
src/modified_chassis/action/: MoveMode.action  Recharge.action  ShootSwitch.action
src/modified_chassis/launch/: laser_filter.launch  laser_filter_sim.launch  logitech.launch  modified.launch  test.launch  turret.launch
src/modified_chassis/script/: test.py
src/modified_chassis/src/: lidar_shooter_alternant.cpp  modified_chassis_client_node.cpp  modified_chassis_server_node.cpp  modified_odom_node.cpp  modified_turret_node.cpp  recharge_client.cpp  recharge_find_camera_client.cpp  recharge_find_camera_server.cpp  recharge_server.cpp  set_goal_test.cpp  srv_chassis_server_node.cpp  teleop.cpp
src/modified_chassis/srv/: MoveMode.srv
src/my_icp/: CMakeLists.txt  package.xml
src/obstacle_analyser/: CMakeLists.txt  package.xml
src/ros_yolo/: CMakeLists.txt  package.xml
src/uvc_camera/: CAR1_calibration.yaml  CAR2_calibration.yaml
src/yolo/: CMakeLists.txt  package.xml
(+368 files in other folders)
